--- a/Layout/GF/src/app/booking/booking.component.css
+++ b/Layout/GF/src/app/booking/booking.component.css
@@ -440,14 +440,15 @@ i {
     font-size: 12px;
   }
   .btn.p-3 {
-    padding: 0.3rem 0.8rem !important;
+    padding: 0.3rem 0.6rem !important;
     font-size: 14px;
+    margin-right: 0 !important;
   }
   .counter > input[type=text]{
     width: 30px;
   }
   .filters{
-    padding: 15px 0;
+    padding: 25px 0;
   }
   .filters div[class ^= 'col-']:first-child{
     padding-right: 0;
@@ -463,5 +464,14 @@ i {
   }
   .filters .col-8{
     padding-left: 5px !important;
+  }
+  .filters .counter{
+    position: absolute;
+    top: -25px;
+    right: 0;
+  }
+  .filters .counter > input{
+    display: block;
+    width: 30px;
   }
 }
