--- a/Layout/GF/src/app/app-footer/app-footer.component.css
+++ b/Layout/GF/src/app/app-footer/app-footer.component.css
@@ -1,5 +1,10 @@
 footer {
   background: #424242;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
 footer .container {
   padding: 15px 0;
