--- a/Layout/GF/src/app/payment-cards/payment-cards.component.html
+++ b/Layout/GF/src/app/payment-cards/payment-cards.component.html
@@ -1,3 +1,50 @@
-<p>
-  payment-cards works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="breadcrumbs  hidden-sm-down mt-2">
+      <ul class="mb-0">
+        <li><a routerLink="/">Главная</a></li>
+        <li><a>Карты оплаты</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col mt-lg-5 mt-md-5">
+      <h2>Карты оплаты</h2>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
+      <div class="paymentDiv">
+        <img src="../../assets/img/sim.svg" alt="" width="100px" class="float-left ml-2">
+        <img src="../../assets/img/close.svg" alt="" width="35px" class="float-right mt-3 mr-4 closeSVG">
+        <br><br>
+        <p class="mt-5 pt-4 ml-3 boldP">XXXX - XXXX - XXXX - 5389</p>
+        <p class="ml-3 float-left nameP">Александр Серов</p>
+        <img src="../../assets/img/credit-card.svg" alt="" class="float-right mr-3 creditCard" width="75px">
+      </div>
+    </div>
+    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
+      <div class="paymentDiv">
+        <img src="../../assets/img/sim.svg" alt="" width="100px" class="float-left ml-2">
+        <img src="../../assets/img/close.svg" alt="" width="35px" class="float-right mt-3 mr-4 closeSVG">
+        <br><br>
+        <p class="mt-5 pt-4 ml-3 boldP">XXXX - XXXX - XXXX - 5389</p>
+        <p class="ml-3 float-left nameP">Александр Серов</p>
+        <img src="../../assets/img/credit-card.svg" alt="" class="float-right mr-3 creditCard" width="75px">
+      </div>
+    </div>
+    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
+      <div class="text-center paymentAddDiv">
+        <img src="../../assets/img/plus.svg" alt="" width="50px" class="addSVG">
+        <br>
+        <a href="#">Добавить еще одну карту оплаты</a>
+      </div>
+    </div>
+  </div>
+</div>
