--- a/Layout/GF/src/app/add-event/add-event.component.html
+++ b/Layout/GF/src/app/add-event/add-event.component.html
@@ -428,42 +428,6 @@
     <div class="col-sm-4" ><b>Фотография:</b>
       <p class="text-grey mt-2">(Поддерживается фото в форматах JPG, PNG), разрешение не более 1200 x 630 px, размером не более 1 Гб</p>
     </div>
-    <div class="col-sm-8" >
-      <form id="zdrop2" class="fileuploader center-align col-sm-8">
-        <div class="upload-label" style="width: 200px;">
-          <i class="fotoIc material-icons">camera_alt</i>
-        </div>
-        <p class="hint"> Вы можете перетащить фото сюда</p>
-        <p class="hint"> или</p>
-        <div class="col text-center">
-          <input type="button" class="btn btn-white col-sm-6 form-control" value="ВЫБЕРИТЕ ФАЙЛ">
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <div class="row d-flex  flex-wrap mt-4">
-    <div class="col-sm-4" style="background-color:white;"><b>Видео:</b>
-      <p class="text-grey mt-2">(Поддерживается видео в форматах AVI, MP4, MPEG, MOV, MKV), разрешение не более 1080 px, размером не более 1 Гб</p>
-    </div>
-    <div class="col-sm-8" >
-      <form id="zdrop-3" class="fileuploader center-align col-sm-8">
-        <div class="upload-label" style="width: 200px;">
-          <i class="fotoIc material-icons">videocam</i>
-        </div>
-        <p class="hint"> Вы можете перетащить видео сюда</p>
-        <p class="hint"> или</p>
-        <div class="col text-center">
-          <input type="button" class="btn btn-white col-sm-6 form-control" value="ВЫБЕРИТЕ ФАЙЛ">
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <div class="row d-flex  flex-wrap mt-4">
-    <div class="col-sm-4" style="background-color:white;"><b>Фотографии:</b>
-      <p class="text-grey mt-2">(Поддерживается фото в форматах JPG, PNG), разрешение не более 1200 x 630 px, размером не более 1 Гб</p>
-    </div>
     <div class="col-sm-8 owlHalf">
       <owl-carousel class="carousel owl-acc-car" [options]="option"
                     [items]="slides"
@@ -509,6 +473,37 @@
         </div>
    
       </owl-carousel>
+    </div>
+    <div class="col-4"></div>
+    <div class="col-sm-8" >
+      <form id="zdrop2" class="fileuploader center-align col-sm-8">
+        <div class="upload-label" style="width: 200px;">
+          <i class="fotoIc material-icons">camera_alt</i>
+        </div>
+        <p class="hint"> Вы можете перетащить фото сюда</p>
+        <p class="hint"> или</p>
+        <div class="col text-center">
+          <input type="button" class="btn btn-white col-sm-6 form-control" value="ВЫБЕРИТЕ ФАЙЛ">
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="row d-flex  flex-wrap mt-4">
+    <div class="col-sm-4" style="background-color:white;"><b>Видео:</b>
+      <p class="text-grey mt-2">(Поддерживается видео в форматах AVI, MP4, MPEG, MOV, MKV), разрешение не более 1080 px, размером не более 1 Гб</p>
+    </div>
+    <div class="col-sm-8" >
+      <form id="zdrop-3" class="fileuploader center-align col-sm-8">
+        <div class="upload-label" style="width: 200px;">
+          <i class="fotoIc material-icons">videocam</i>
+        </div>
+        <p class="hint"> Вы можете перетащить видео сюда</p>
+        <p class="hint"> или</p>
+        <div class="col text-center">
+          <input type="button" class="btn btn-white col-sm-6 form-control" value="ВЫБЕРИТЕ ФАЙЛ">
+        </div>
+      </form>
     </div>
   </div>
 
