--- a/Layout/GF/src/app/finance/finance.component.html
+++ b/Layout/GF/src/app/finance/finance.component.html
@@ -1,3 +1,137 @@
-<p>
-  finance works!
-</p>
+<div class="container-fluid">
+	<div class="row">
+		<div class="breadcrumbs  hidden-sm-down mt-2">
+	    	<ul class="mb-0">
+		        <li><a routerLink="/">Главная</a></li>
+		        <li><a>Финансы</a></li>
+	    	</ul>
+    	</div>
+	</div>
+
+	<div class="row">
+		<div class="col mt-lg-5 mt-md-5">
+      		<h2>Финансы</h2>
+    	</div>
+	</div>
+
+	<div class="row">
+		<div class="col-12 col-lg-7 mt-4">
+			<div class="row mt-3">
+	            <div class="col-12 col-md-2 pt-1 sortOptions">Сортировать</div>
+	            <div class="col-12 col-md-3">
+	          		<div class="form-group select-caret">
+		                <select class="form-control">
+		                  <option>По дате <span>↓</span></option>
+		                  <option>По дате</option>
+		                  <option>По дате</option>
+		                  <option>По дате</option>
+		                </select>
+	              	</div>
+	            </div>
+
+	            <div class="col-12 col-md-2 pt-1 showOptions">Показывать</div>
+	            <div class="col-12 col-md-5">
+	          		<div class="form-group select-caret">
+		                <select class="form-control">
+		                  <option>Все финансовые операции</option>
+		                  <option>Все финансовые операции</option>
+		                  <option>Все финансовые операции</option>
+		                  <option>Все финансовые операции</option>
+		                </select>
+	              	</div>
+	            </div>
+            </div>
+		</div>
+
+		<div class="col-12 col-lg-5 mt-4">
+			<div class="col-12 col-md-5 float-right d-flex justify-content-center align-items-center balanceDiv mt-3">
+				<span>
+					Ваш баланс: <span class="pl-3"><b> 5500 &#8381; </b></span> 
+				</span>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-12 mt-5 table-responsive-md">
+			<table class="table spacing-table">
+			  	<thead class="theadborder">
+			    	<tr id="theadtr">
+			      		<th scope="col">Дата</th>
+			      		<th scope="col">Сумма</th>
+			      		<th scope="col">Способ оплаты</th>
+			      		<th scope="col">Назначение</th>
+			    	</tr>
+			  	</thead>
+			  	<tbody>
+			    	<tr>
+			      		<td>13 Февраля 2018</td>
+			      		<td class="redtd">-5 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата мероприятия &nbsp <a href="#">«Огни большог города»</a></td>
+			    	</tr>
+			    	<tr>
+			      		<td>11 Февраля 2018</td>
+			      		<td class="redtd">-2 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата мероприятия  <a href="#">«Экскурсия по Москве»</a></td>
+			   		</tr>
+			    	<tr>
+			      		<td>08 Февраля 2018</td>
+			      		<td class="bluetd">+500 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Пополнение личного счета</td>
+			   		</tr>
+			   		<tr>
+			      		<td>05 Февраля 2018</td>
+			      		<td class="redtd">-1 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата дополнительных услуг гида</td>
+			   		</tr>
+			   		<tr>
+			      		<td>02 Февраля 2018</td>
+			      		<td class="bluetd">+5 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Пополнение личного счета</td>
+			   		</tr>
+			   		<tr>
+			      		<td>29 января 2018</td>
+			      		<td class="redtd">-5 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата мероприятия  <a href="#">«Огни большого города»</a></td>
+			   		</tr>
+			   		<tr>
+			      		<td>25 января 2018</td>
+			      		<td class="redtd">-2 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата мероприятия  <a href="#">«Экскурсия по Москве»</a></td>
+			   		</tr>
+			   		<tr>
+			      		<td>08 Февраля 2018</td>
+			      		<td class="bluetd">+500 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Пополнение личного счета</td>
+			   		</tr>
+			   		<tr>
+			      		<td>05 Февраля 2018</td>
+			      		<td class="redtd">-1 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Оплата дополнительных услуг гида</td>
+			   		</tr>
+			   		<tr>
+			      		<td>02 Февраля 2018</td>
+			      		<td class="bluetd">+5 000 &#8381;</td>
+			      		<td>Банковская карта</td>
+			      		<td>Пополнение личного счета</td>
+			   		</tr>
+			  	</tbody>
+			</table>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12 show-more more">
+      		<button type="button" class="show-more-btn morebtn">Показать еще</button>
+    	</div>
+	</div>
+</div>
