--- a/Layout/GF/src/app/payment-cards/payment-cards.component.html
+++ b/Layout/GF/src/app/payment-cards/payment-cards.component.html
@@ -19,7 +19,7 @@
 
 <div class="container mt-5 mb-5">
   <div class="row">
-    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
+    <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
       <div class="paymentDiv">
         <img src="../../assets/img/sim.svg" alt="" width="100px" class="float-left ml-2">
         <img src="../../assets/img/close.svg" alt="" width="35px" class="float-right mt-3 mr-4 closeSVG">
@@ -29,7 +29,7 @@
         <img src="../../assets/img/credit-card.svg" alt="" class="float-right mr-3 creditCard" width="75px">
       </div>
     </div>
-    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
+    <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
       <div class="paymentDiv">
         <img src="../../assets/img/sim.svg" alt="" width="100px" class="float-left ml-2">
         <img src="../../assets/img/close.svg" alt="" width="35px" class="float-right mt-3 mr-4 closeSVG">
@@ -39,12 +39,13 @@
         <img src="../../assets/img/credit-card.svg" alt="" class="float-right mr-3 creditCard" width="75px">
       </div>
     </div>
-    <div class="col-12 col-md-4 d-flex justify-content-center align-items-center">
-      <div class="text-center paymentAddDiv">
-        <img src="../../assets/img/plus.svg" alt="" width="50px" class="addSVG">
-        <br>
-        <a href="#">Добавить еще одну карту оплаты</a>
-      </div>
+    <div class="col-12 col-lg-4 justify-content-center align-items-center">
+      <a href="#" class="text-center paymentDiv paymentAddDiv d-flex align-items-center">
+        <div class="text-center w-100">
+          <i _ngcontent-c5="" class="plusIcon mb-1"></i>
+          <p>Добавить еще одну карту оплаты</p>
+        </div>
+      </a>
     </div>
   </div>
 </div>
