--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -4,6 +4,7 @@
 @import "../src/assets/fonts/rouble/styles.css";
 @import '~font-awesome/css/font-awesome.min.css';
 @import "~nouislider/distribute/nouislider.min.css";
+@import "./assets/libraries/responsive-table.css";
 
 html {
   height: 100%;
